// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`root 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "context": null,
    "fn": [Function],
  },
  "type": "FORK",
}
`;

exports[`watchNewIllust 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "id": 1,
      },
    ],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`watchNewIllust 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      undefined,
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
